fixed align and bugs

--- a/src/components/DashCard.css
+++ b/src/components/DashCard.css
@@ -3,6 +3,7 @@
     border-radius: 1em;
 
     width: 100%;
+    max-width: 25em;
     height: 8em;
 }
 
@@ -14,7 +15,6 @@
     padding: 1em;
     box-sizing: border-box;
     height: 100%;
-    
 }
 
 .dash-card__content .left-col{
