--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,17 +1,18 @@
 .sidebar{
     background-color: var(--secondary-bg-clr);
     color: var(--primary-font-clr);
-    height: 100%;
+    height: 100vh;
     width: 17em;
 }
 
 .sidebar__content{
-    margin: 2em 1em;
+    padding: 2em 0;
 }
 
 .sidebar__content .logo{
     display: flex;
     align-items: center;
+    margin-left: 2em;
 }
 
 .logo h2{
@@ -31,6 +32,9 @@
     align-items: center;
     border-left-color: transparent;
     padding-left: 1em;
+    width: 100%;
+    margin: -7px 0;
+    height: 3em;
 }
 
 .tabs .tab.active{
